--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,16 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.TribalLiveCoding">
+
+        </activity>
+
+        <activity
+            android:name=".uixml.MainXmlActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
